# VNTC2.0-APP

./: .gitignore  README.md  example_config.toml  pubspec.yaml  云服务器.md  大型项目规划.md  聊天室双机联调说明.md  项目开发文档.md  项目开发规范.md
VntcApp1.0/: .dockerignore  .gitignore  README.md  README_EN.md  analysis_options.yaml  deny.toml  pubspec.yaml  大型项目规划.md  更新方案文档.md  编译版本规则.md  (+2 more)
VntcApp1.0/linux_webui/: Cargo.toml  README.md  config.example.json  install.sh  uninstall.sh
VntcApp1.0/linux_webui/docker/: Dockerfile  Dockerfile.native-debian12  README.md  compose.yaml  entrypoint.sh  load-image.sh
VntcApp1.0/linux_webui/src/: api.rs  app_settings.rs  config.rs  lib.rs  main.rs  profile_store.rs  runtime_log.rs  vnt_service.rs  web_assets.rs
VntcApp1.0/linux_webui/systemd/: vntc-linux-webui-root.service  vntc-linux-webui.service
VntcApp1.0/linux_webui/tests/: api_smoke.sh  experience_mode.test.mjs  release_smoke.sh  ui_uptime.test.mjs
VntcApp1.0/linux_webui/web/: index.html
VntcApp1.0/linux_webui/web/js/: api.js  app.js  router.js  state.js  ui.js
VntcApp1.0/linux_webui/web/js/pages/: about.js  configs.js  dashboard.js  link-status.js  settings.js
VntcApp1.0/linux_webui/web/styles/: components.css  pages.css  responsive.css  shell.css  tokens.css
vnts2.0服务端开发包/official-vnts-source-2.0.0/: Cargo.toml  NOTICE  README.md  build.rs  deny.toml
vnts2.0服务端开发包/official-vnts-source-2.0.0/.github/workflows/: rust.yml
vnts2.0服务端开发包/official-vnts-source-2.0.0/docs/: web-module-6-1-security-baseline.md  web-module-6-2-status-and-errors.md  web-module-6-3-1-offline-console-status.md  web-module-6-3-2-1-generated-wireguard-peer-ui.md  web-module-6-3-2-2-wireguard-client-config.md  web-module-6-3-2-wireguard-management.md  web-module-6-4-1-windows-service-installation.md  web-module-6-4-2-windows-service-operations.md  web-module-6-5-1-windows-reproducible-package.md  web-module-6-5-2-1-windows-gui-existing-service.md  web-module-6-5-2-2-windows-gui-safe-update.md  web-module-6-5-2-windows-gui-manager.md  web-module-6-5-3-1-native-gui-web-console-enable.md  web-module-6-5-3-native-windows-gui-exe.md  windows-native-gui-network-wireguard-plan.md  windows-portable-gui-module-8-2.md  windows-portable-layout-module-8-1.md  windows-portable-migration-module-8-4.md  windows-portable-package-module-8-3.md  wireguard-module-1-dependency-gate.md  wireguard-module-2-1-runtime-ip-consistency.md  wireguard-module-2-2-ip-management-api.md  wireguard-module-2-ip-allocation.md  wireguard-module-3-0-server-identity-persistence.md  wireguard-module-3-1-master-key-rotation.md  wireguard-module-3-2-identity-immediate-rotation.md  wireguard-module-4-0-peer-public-key-persistence.md  wireguard-module-4-1-peer-management-api.md  wireguard-module-4-2-generated-peer-api.md  wireguard-module-4-3-release.md  wireguard-module-4-4-production-deployment.md  wireguard-module-4-5-lan-test.md  wireguard-module-5-0-udp-runtime.md  wireguard-module-5-1-data-bridge-routing-mtu.md  wireguard-module-5-3-managed-p2p.md
vnts2.0服务端开发包/official-vnts-source-2.0.0/proto/: control_message.proto  server_message.proto
vnts2.0服务端开发包/official-vnts-source-2.0.0/src/: main.rs  windows_service.rs
vnts2.0服务端开发包/official-vnts-source-2.0.0/src/http/: dashboard.rs  mod.rs  web_security.rs  web_server.rs
vnts2.0服务端开发包/official-vnts-source-2.0.0/src/protocol/: control_message.rs  ip_packet_protocol.rs  mod.rs  rpc_message.rs  server_message.rs
vnts2.0服务端开发包/official-vnts-source-2.0.0/src/server/: mod.rs  network_state_provider.rs  peer_server.rs  quic.rs  tcp.rs  tcp_websocket.rs  websocket.rs  wireguard_bridge.rs  wireguard_p2p.rs  wireguard_runtime.rs
vnts2.0服务端开发包/official-vnts-source-2.0.0/src/server/control_server/: db.rs  handler.rs  mod.rs  service.rs  wireguard_identity.rs  wireguard_profile.rs
vnts2.0服务端开发包/official-vnts-source-2.0.0/src/server/control_server/db/: migrations.rs
vnts2.0服务端开发包/official-vnts-source-2.0.0/src/utils/: cert.rs  config.rs  log.rs  mod.rs
vnts2.0服务端开发包/official-vnts-source-2.0.0/static/: index.html
vnts2.0服务端开发包/official-vnts-source-2.0.0/static/assets/: app.css  app.js
vnts2.0服务端开发包/official-vnts-source-2.0.0/tests/: boringtun_gate.rs  wireguard_identity_rotation.rs  wireguard_master_key_rotation.rs  wireguard_peer_api.rs  wireguard_udp_runtime.rs
vnts2.0服务端开发包/official-vnts-source-2.0.0/tests/fixtures/: client-list-v2-legacy.hex  client-list-v2-wireguard.hex  reg-request-v2-legacy.hex  reg-request-v2-wireguard.hex  rpc-client-info-v2-legacy.hex  rpc-client-info-v2-wireguard.hex
vnts2.0服务端开发包/official-vnts-source-2.0.0/web-console/: package-lock.json  package.json  tailwind.config.cjs
vnts2.0服务端开发包/official-vnts-source-2.0.0/web-console/scripts/: build-console.mjs
vnts2.0服务端开发包/official-vnts-source-2.0.0/web-console/src/: app.css  index.source.html  qrcode-entry.js
wireguard-agent/: Cargo.toml  README.md  deny.toml
wireguard-agent/src/: main.rs
(+493 files in other folders)
