[package]
name = "vnts-wireguard-agent"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
base64 = "0.22"
prost = "0.14"
rand = "0.9"
tokio = { version = "1.52", features = ["macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "debuginfo"
panic = "abort"
