[package]
name = "vntc-linux-webui"
version = "4.5.0"
edition = "2024"
description = "Headless Linux service and WebUI for VNTC"
license = "MIT"

[dependencies]
anyhow = "1"
axum = "0.8"
env_logger = "0.11"
ipnet = "2.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync"] }
vnt-core = { path = "../vendor/vnt-core-2.0.0" }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[patch.crates-io]
tun-rs = { path = "../vendor/tun-rs-2.5.7" }
