[package]
name = "vnts2"
version = "2.0.0"
edition = "2024"

[dependencies]

anyhow = "1"

clap = { version = "4.5", features = ["derive"] }

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
rcgen = "0.14"
sha2 = "0.10"
hex = "0.4"

quinn = { version = "0.11", default-features = false, features = ["log", "platform-verifier", "rustls", "runtime-tokio"] }
bytes = "1"


log = "0.4"
log4rs = "1.3"

num_enum = "0.7"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
pnet_packet = "0.35"

rand = "0.9"
ipnet = { version = "2.11", features = ["serde"] }
dashmap = "6.1"
parking_lot = "0.12"

prost = "0.14"
prost-types = "0.14"
tokio-tungstenite = "0.28.0"
tungstenite = "0.28.0"

axum = "0.8.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

time = { version = "0.3", features = ["macros", "formatting"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
rust-embed = "8.0"
mime_guess = "2.0"

sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "chrono", "uuid"] }
once_cell = "1.21"
zerocopy = { version = "0.8.31", features = ["derive"] }

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3.2"

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"


[profile.release]
opt-level = 'z'
debug = 0
debug-assertions = false
strip = "debuginfo"
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
